--- a/WeatherWebApplication/WeatherWebApplication.csproj
+++ b/WeatherWebApplication/WeatherWebApplication.csproj
@@ -24,6 +24,18 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\src\app\weather\weather.component.ts" />
+    <None Remove="ClientApp\src\app\weather\weather.service.ts" />
+    <None Remove="ClientApp\src\app\weather\WeatherModelByCity.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\weather\weather.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\weather\weather.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\weather\WeatherModelByCity.ts" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
